# Email_Automation

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
b2b_crm_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: Dockerfile  agent_graph.py  main.py  requirements.txt  schemmas.py
backend/agents/: rag.py  research.py  triage.py  writer.py
frontend/: Dockerfile  debug-check.js  package-lock.json  package.json
frontend/CUsersdevan/OneDrive/Documents/b2b-email-system/frontend/.next/dev/static/chunks/: 03zr_OneDrive_Documents_b2b-email-system_frontend_pages__error_0rca20t._.js  0_86_next_dist_pages__error_0y61.34.js  [next]_entry_page-loader_ts_09u9deh._.js  [project]_OneDrive_Documents_b2b-email-system_frontend_pages__error_07xvfw~._.js  [root-of-the-server]__01qhodo._.js  node_modules_next_dist_shared_lib_0n1wg2c._.js.map
frontend/CUsersdevan/OneDrive/Documents/b2b-email-system/frontend/.next/dev/static/chunks/pages/: _error.js
frontend/app/: globals.css  layout.tsx  page.tsx
